// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Login /> should render component 1`] = `
<div
  className="login-container"
>
  <form
    onSubmit={[Function]}
  >
    <h2>
      Log in here
    </h2>
    <div
      className="form_element"
    >
      <input
        className=""
        name="email"
        onChange={[Function]}
        placeholder="Enter your mail"
        type="email"
        value=""
      />
    </div>
    <div
      className="form_element"
    >
      <input
        className=""
        name="password"
        onChange={[Function]}
        placeholder="Enter your password"
        type="password"
        value=""
      />
    </div>
    <button
      disabled={true}
      type="submit"
    >
      Log in
    </button>
    <br />
  </form>
</div>
`;

exports[`<Login /> should render component with error message for email 1`] = `
<div
  className="login-container"
>
  <form
    onSubmit={[Function]}
  >
    <h2>
      Log in here
    </h2>
    <div
      className="form_element"
    >
      <input
        className="field-error"
        name="email"
        onChange={[Function]}
        placeholder="Enter your mail"
        type="email"
        value=""
      />
    </div>
    <div
      className="error"
    >
      test email
    </div>
    <div
      className="form_element"
    >
      <input
        className=""
        name="password"
        onChange={[Function]}
        placeholder="Enter your password"
        type="password"
        value=""
      />
    </div>
    <button
      disabled={true}
      type="submit"
    >
      Log in
    </button>
    <br />
    <a
      className="reset-password"
      href="reset-password"
    >
      Forgot my password
    </a>
  </form>
</div>
`;

exports[`<Login /> should render component with error message for password 1`] = `
<div
  className="login-container"
>
  <form
    onSubmit={[Function]}
  >
    <h2>
      Log in here
    </h2>
    <div
      className="form_element"
    >
      <input
        className=""
        name="email"
        onChange={[Function]}
        placeholder="Enter your mail"
        type="email"
        value=""
      />
    </div>
    <div
      className="form_element"
    >
      <input
        className="field-error"
        name="password"
        onChange={[Function]}
        placeholder="Enter your password"
        type="password"
        value=""
      />
    </div>
    <div
      className="error"
    >
      test password
    </div>
    <button
      disabled={true}
      type="submit"
    >
      Log in
    </button>
    <br />
    <a
      className="reset-password"
      href="reset-password"
    >
      Forgot my password
    </a>
  </form>
</div>
`;
